--- a/1.let,const/7.const不止是常量.html
+++ b/1.let,const/7.const不止是常量.html
@@ -10,7 +10,7 @@
     <script>
     const lt = {}
     lt.getUrlParams = function(){
-        //...
+        //常量指向的内存地址不会发生,但对象的值可以更改
     }
     </script>
 </body>
